css/side_panel.css
.sp-container {
  background-color: var(--dark-two);
  display: flex;
  flex-direction: column;
  font-size: 16px;
  gap: 3px;
  max-height: 529px;
  min-width: 285px;
  overflow-y: auto;
  overflow-x: hidden;
  scrollbar-color: var(--gray-three) var(--dark-three); /* thumb and track color */
  scrollbar-width: thin;
}

.sp-container .agent-title {
  background-color: var(--dark-one);
  border-radius: 0px;
  color: var(--gray-two);
  margin-right: 5px;
  padding: 12px 0px 16px 21px;
}

.sp-container::-webkit-scrollbar {
  height: 10px;
  width: 10px;
}

.sp-container::-webkit-scrollbar-track {
  background: var(--dark-three);
}

.sp-container::-webkit-scrollbar-thumb {
  background: var(--dark-four);
  border-radius: 10px;
  border: 2px solid transparent;
  background-clip: content-box;
}

.sp-container::-webkit-scrollbar-thumb:hover {
  background: var(--gray-one);
  border: 2px solid transparent;
  background-clip: content-box;
}

.checkboxtree {
  color: var(--gray-two);
  display: flex;
  flex-direction: column;
  font-size: 14px;
  gap: 3px;
}

.item-row {
  align-items: center;
  background-color: var(--dark-three);
  display: flex;
  gap: 6px;
  margin-right: 10px;
  margin-left: 10px;
  padding: 12px 11px 12px 20px;
  width: 231px;
}

.check-all {
  display: flex;
  margin-left: 81px;
}

